--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript{
+    ext{
+        splash_screen_version="1.0.0"
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
