--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         android:theme="@style/Theme.JobSpot"
         tools:targetApi="31">
         <activity
+            android:name=".auth.AuthActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.JobSpotSplashTheme"
-            >
+            android:theme="@style/Theme.JobSpotSplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
