--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript{
     ext{
         splash_screen_version="1.0.0"
+        nav_version = "2.5.1"
+    }
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
