--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
         tools:targetApi="31">
         <activity
             android:name=".auth.AuthActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.JobSpotSplashTheme">
+            android:theme="@style/Theme.JobSpotSplashTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
