--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript{
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.gms:google-services:4.3.13'
     }
 }
 
