--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript{
     ext{
         splash_screen_version="1.0.0"
         nav_version = "2.5.1"
+        circular_iv_version="3.1.0"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
