--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,23 @@
 buildscript{
     ext{
         splash_screen_version="1.0.0"
-        nav_version = "2.5.2"
+        nav_version = "2.5.3"
         circular_iv_version="3.1.0"
         power_spinner_version="1.2.4"
         image_picker_version="2.1"
+        lifecycle_version = "2.5.1"
+        viewmodel_version = "2.5.1"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.gms:google-services:4.3.14'
     }
 }
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
