--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,6 @@ dependencies {
     //PowerSpinner
     implementation "com.github.skydoves:powerspinner:$power_spinner_version"
 
-
-
+    //Lottie Library
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
