--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript{
         image_picker_version="2.1"
         lifecycle_version = "2.5.1"
         viewmodel_version = "2.5.1"
+        lottieVersion = "3.4.0"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
