--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,8 @@ dependencies {
     implementation "com.github.skydoves:powerspinner:$power_spinner_version"
 
     //Lottie Library
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
+    // SmoothBottomBar
+    implementation "com.github.ibrahimsn98:SmoothBottomBar:$smooth_bottom_bar_version"
 }
