--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.JobSpot"
         tools:targetApi="31">
         <activity
+            android:name=".home.HomeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".user_details.UserDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
