JobSpot - Implement job_detail_card.xml and populated the recycler View, Implement the Job List Fragment and Job View Activity, Bug Fixes and UI changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     // SmoothBottomBar
     implementation "com.github.ibrahimsn98:SmoothBottomBar:$smooth_bottom_bar_version"
+
+    //Coil Image
+    implementation "io.coil-kt:coil:$coil_version"
 }
