--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,22 @@
         android:theme="@style/Theme.JobSpot"
         tools:targetApi="31">
         <activity
-            android:name=".home.JobViewActivity"
+            android:name=".home.activity.MockTestActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".home.activity.JobViewActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".home.HomeActivity"
+            android:name=".home.activity.HomeActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustPan">
             <meta-data
