--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
-buildscript{
-    ext{
-        splash_screen_version="1.0.0"
+buildscript {
+    ext {
+        splash_screen_version = "1.0.0"
         nav_version = "2.5.3"
-        circular_iv_version="3.1.0"
-        power_spinner_version="1.2.4"
-        image_picker_version="2.1"
+        circular_iv_version = "3.1.0"
+        power_spinner_version = "1.2.4"
+        image_picker_version = "2.1"
         lifecycle_version = "2.5.1"
         viewmodel_version = "2.5.1"
         lottie_version = "3.4.0"
         smooth_bottom_bar_version = "1.7.9"
         coil_version = "2.2.2"
+        viewpager_version = "1.0.0"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
