--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
 
     //Coil Image
     implementation "io.coil-kt:coil:$coil_version"
+
+    //Browser
+    implementation "com.github.mhiew:android-pdf-viewer:3.2.0-beta.1"
 }
